--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,9 @@
         "drupal/core": "~8.6",
         "drush/drush": "^9.0.0",
         "drupal/tome": "^1.0",
-        "drupal-tome/tome_drush": "dev-master"
+        "drupal-tome/tome_drush": "dev-master",
+        "drupal/markdown": "2.x-dev@dev",
+        "league/commonmark": "^1.5"
     },
     "scripts": {
         "symlink": "./scripts/symlink.sh",
