--- a/config/core.extension.yml
+++ b/config/core.extension.yml
@@ -4,9 +4,11 @@ module:
   dblog: 0
   dynamic_page_cache: 0
   field: 0
+  field_ui: 0
   file: 0
   filter: 0
   link: 0
+  markdown: 0
   menu_link_content: 0
   menu_ui: 0
   node: 0
