--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "drupal/tome": "^1.0",
         "drupal-tome/tome_drush": "dev-master",
         "drupal/markdown": "2.x-dev@dev",
-        "league/commonmark": "^1.5"
+        "league/commonmark": "^1.5",
+        "drupal/geshifilter": "^1.3"
     },
     "scripts": {
         "symlink": "./scripts/symlink.sh",
