--- a/config/core.extension.yml
+++ b/config/core.extension.yml
@@ -3,10 +3,13 @@ module:
   breakpoint: 0
   dblog: 0
   dynamic_page_cache: 0
+  editor: 0
   field: 0
   field_ui: 0
   file: 0
   filter: 0
+  geshifield: 0
+  geshifilter: 0
   link: 0
   markdown: 0
   menu_link_content: 0
