--- a/config/filter.format.markdown.yml
+++ b/config/filter.format.markdown.yml
@@ -3,20 +3,26 @@ langcode: en
 status: true
 dependencies:
   module:
+    - editor
+    - geshifilter
     - markdown
 name: Markdown
 format: markdown
-weight: 0
+weight: -9
 filters:
   markdown:
     id: markdown
     provider: markdown
     status: true
-    weight: -15
+    weight: -49
     settings:
-      override: false
+      override: true
       id: commonmark
       enabled: true
+      settings:
+        html_input: allow
+        max_nesting_level: 0
+        allow_unsafe_links: true
       render_strategy:
         type: filter_output
         custom_allowed_html: ''
@@ -24,10 +30,97 @@ filters:
           commonmark: true
           commonmark-external-links: false
           commonmark-footnotes: false
-          commonmark-heading-permalink: true
+          commonmark-heading-permalink: false
           commonmark-strikethrough: false
           commonmark-table: false
           commonmark-task-list: false
           filter_align: false
           filter_caption: false
+      extensions: {  }
     filterFormat: markdown
+  filter_html_image_secure:
+    id: filter_html_image_secure
+    provider: filter
+    status: false
+    weight: -42
+    settings: {  }
+  filter_url:
+    id: filter_url
+    provider: filter
+    status: false
+    weight: -43
+    settings:
+      filter_url_length: 72
+  filter_html:
+    id: filter_html
+    provider: filter
+    status: false
+    weight: -48
+    settings:
+      allowed_html: '<a href hreflang> <em> <strong> <cite> <blockquote cite> <code> <ul type> <ol start type=''1 A I''> <li> <dl> <dt> <dd> <h2 id=''jump-*''> <h3 id> <h4 id> <h5 id> <h6 id>'
+      filter_html_help: true
+      filter_html_nofollow: false
+  filter_autop:
+    id: filter_autop
+    provider: filter
+    status: false
+    weight: -45
+    settings: {  }
+  filter_align:
+    id: filter_align
+    provider: filter
+    status: false
+    weight: -46
+    settings: {  }
+  filter_caption:
+    id: filter_caption
+    provider: filter
+    status: false
+    weight: -44
+    settings: {  }
+  filter_htmlcorrector:
+    id: filter_htmlcorrector
+    provider: filter
+    status: false
+    weight: -41
+    settings: {  }
+  filter_html_escape:
+    id: filter_html_escape
+    provider: filter
+    status: false
+    weight: -47
+    settings: {  }
+  filter_geshifilter:
+    id: filter_geshifilter
+    provider: geshifilter
+    status: true
+    weight: -50
+    settings:
+      general_tags:
+        tags: 'code blockcode'
+        tag_styles:
+          16: 16
+          1: 0
+          2: 0
+          4: 0
+          8: 0
+        decode_entities: true
+      per_language_settings:
+        table:
+          language:
+            css:
+              tags: ''
+            html4strict:
+              tags: ''
+            javascript:
+              tags: ''
+            jquery:
+              tags: ''
+            php:
+              tags: php
+  editor_file_reference:
+    id: editor_file_reference
+    provider: editor
+    status: false
+    weight: -40
+    settings: {  }
