--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "drupal-tome/tome_drush": "dev-master",
         "drupal/markdown": "2.x-dev@dev",
         "league/commonmark": "^1.5",
-        "drupal/geshifilter": "^1.3"
+        "drupal/geshifilter": "^1.3",
+        "drupal/bootstrap_barrio": "^5.5@beta"
     },
     "scripts": {
         "symlink": "./scripts/symlink.sh",
