--- a/config/core.extension.yml
+++ b/config/core.extension.yml
@@ -34,6 +34,7 @@ theme:
   classy: 0
   claro: 0
   seven: 0
+  bootstrap_barrio: 0
 profile: minimal
 _core:
   default_config_hash: R4IF-ClDHXxblLcG0L7MgsLvfBIMAvi_skumNFQwkDc
