--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
         "drupal/markdown": "2.x-dev@dev",
         "league/commonmark": "^1.5",
         "drupal/geshifilter": "^1.3",
-        "drupal/bootstrap_barrio": "^5.5@beta"
+        "drupal/bootstrap_barrio": "^5.5@beta",
+        "drupal/admin_toolbar": "^3.0"
     },
     "scripts": {
         "symlink": "./scripts/symlink.sh",
