--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "league/commonmark": "^1.5",
         "drupal/geshifilter": "^1.3",
         "drupal/bootstrap_barrio": "^5.5@beta",
-        "drupal/admin_toolbar": "^3.0"
+        "drupal/admin_toolbar": "^3.0",
+        "drupal/gin": "^3.0@alpha"
     },
     "scripts": {
         "symlink": "./scripts/symlink.sh",
