--- a/config/core.extension.yml
+++ b/config/core.extension.yml
@@ -11,6 +11,7 @@ module:
   filter: 0
   geshifield: 0
   geshifilter: 0
+  gin_toolbar: 0
   link: 0
   markdown: 0
   menu_link_content: 0
@@ -34,8 +35,8 @@ theme:
   stable: 0
   classy: 0
   claro: 0
-  seven: 0
   bootstrap_barrio: 0
+  gin: 0
 profile: minimal
 _core:
   default_config_hash: R4IF-ClDHXxblLcG0L7MgsLvfBIMAvi_skumNFQwkDc
