--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "drupal/geshifilter": "^1.3",
         "drupal/bootstrap_barrio": "^5.5@beta",
         "drupal/admin_toolbar": "^3.0",
-        "drupal/gin": "^3.0@alpha"
+        "drupal/gin": "^3.0@alpha",
+        "drupal/gin_login": "^1.0@RC"
     },
     "scripts": {
         "symlink": "./scripts/symlink.sh",
