--- a/config/core.extension.yml
+++ b/config/core.extension.yml
@@ -2,6 +2,7 @@ module:
   admin_toolbar: 0
   block: 0
   breakpoint: 0
+  contextual: 0
   dblog: 0
   dynamic_page_cache: 0
   editor: 0
@@ -38,6 +39,7 @@ theme:
   claro: 0
   bootstrap_barrio: 0
   gin: 0
+  bartik: 0
 profile: minimal
 _core:
   default_config_hash: R4IF-ClDHXxblLcG0L7MgsLvfBIMAvi_skumNFQwkDc
