--- a/config/core.extension.yml
+++ b/config/core.extension.yml
@@ -20,6 +20,7 @@ module:
   menu_ui: 0
   node: 0
   page_cache: 0
+  path: 0
   path_alias: 0
   serialization: 0
   system: 0
@@ -31,6 +32,8 @@ module:
   toolbar: 0
   update: 0
   user: 0
+  views_ui: 0
+  views: 10
   minimal: 1000
 theme:
   stark: 0
