--- a/config/core.entity_form_display.node.markdown.default.yml
+++ b/config/core.entity_form_display.node.markdown.default.yml
@@ -4,8 +4,10 @@ status: true
 dependencies:
   config:
     - field.field.node.markdown.body
+    - field.field.node.markdown.field_term
     - node.type.markdown
   module:
+    - path
     - text
 id: node.markdown.default
 targetEntityType: node
@@ -25,6 +27,18 @@ content:
   created:
     type: datetime_timestamp
     weight: 10
+    region: content
+    settings: {  }
+    third_party_settings: {  }
+  field_term:
+    weight: 122
+    settings: {  }
+    third_party_settings: {  }
+    type: options_buttons
+    region: content
+  path:
+    type: path
+    weight: 30
     region: content
     settings: {  }
     third_party_settings: {  }
