--- a/config/core.entity_view_display.node.markdown.default.yml
+++ b/config/core.entity_view_display.node.markdown.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.node.markdown.body
+    - field.field.node.markdown.field_term
     - node.type.markdown
   module:
     - text
@@ -19,6 +20,14 @@ content:
     weight: 101
     settings: {  }
     third_party_settings: {  }
+    region: content
+  field_term:
+    weight: 102
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
     region: content
   links:
     weight: 100
