--- a/config/field.field.node.markdown.field_topic.yml
+++ b/config/field.field.node.markdown.field_topic.yml
@@ -1,19 +1,18 @@
-uuid: 17967dd7-132e-4c55-b584-f0efcedb7083
+uuid: 8823dd95-5cc1-4f09-bd89-19d8bf81c143
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_term
+    - field.storage.node.field_topic
     - node.type.markdown
-    - taxonomy.vocabulary.drupal
-    - taxonomy.vocabulary.javascript
-id: node.markdown.field_term
-field_name: field_term
+    - taxonomy.vocabulary.topic
+id: node.markdown.field_topic
+field_name: field_topic
 entity_type: node
 bundle: markdown
-label: Term
+label: Topic
 description: ''
-required: false
+required: true
 translatable: false
 default_value: {  }
 default_value_callback: ''
@@ -21,11 +20,10 @@ settings:
   handler: 'default:taxonomy_term'
   handler_settings:
     target_bundles:
-      drupal: drupal
-      javascript: javascript
+      topic: topic
     sort:
       field: name
       direction: asc
     auto_create: false
-    auto_create_bundle: drupal
+    auto_create_bundle: ''
 field_type: entity_reference
