--- a/composer.json
+++ b/composer.json
@@ -32,8 +32,7 @@
         "drupal/admin_toolbar": "^3.0",
         "drupal/gin": "^3.0@alpha",
         "drupal/gin_login": "^1.0@RC",
-        "drupal/taxonomy_menu": "^3.4",
-        "drupal/taxonomy_menu_ui": "^1.4"
+        "drupal/taxonomy_menu": "^3.4"
     },
     "scripts": {
         "symlink": "./scripts/symlink.sh",
