--- a/config/core.entity_view_display.node.markdown.default.yml
+++ b/config/core.entity_view_display.node.markdown.default.yml
@@ -4,6 +4,8 @@ status: true
 dependencies:
   config:
     - field.field.node.markdown.body
+    - field.field.node.markdown.field_tags
+    - field.field.node.markdown.field_topic
     - node.type.markdown
   module:
     - text
@@ -20,9 +22,25 @@ content:
     settings: {  }
     third_party_settings: {  }
     region: content
+  field_tags:
+    weight: 103
+    label: hidden
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
+  field_topic:
+    weight: 102
+    label: hidden
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
   links:
     weight: 100
+    region: content
     settings: {  }
     third_party_settings: {  }
-    region: content
 hidden: {  }
