--- a/config/core.entity_view_display.node.markdown.teaser.yml
+++ b/config/core.entity_view_display.node.markdown.teaser.yml
@@ -5,6 +5,8 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - field.field.node.markdown.body
+    - field.field.node.markdown.field_tags
+    - field.field.node.markdown.field_topic
     - node.type.markdown
   module:
     - text
@@ -27,4 +29,6 @@ content:
     settings: {  }
     third_party_settings: {  }
     region: content
-hidden: {  }
+hidden:
+  field_tags: true
+  field_topic: true
