--- a/config/core.extension.yml
+++ b/config/core.extension.yml
@@ -1,6 +1,7 @@
 module:
   admin_toolbar: 0
   block: 0
+  block_content: 0
   breakpoint: 0
   contextual: 0
   dblog: 0
@@ -24,6 +25,7 @@ module:
   path_alias: 0
   serialization: 0
   system: 0
+  taxonomy: 0
   text: 0
   tome: 0
   tome_base: 0
